<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/changename_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/nameChangeFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="비밀번호 : "
                android:textColor="@color/listViewTextColor"/>
            <EditText
                android:id="@+id/check_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/listViewTextColor"
                android:textColor="@color/listViewTextColor"
                android:hint="@string/currentPassword"
                android:singleLine="true"/>
        </LinearLayout>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/listViewTextColor"
            android:textColor="@color/listViewTextColor"
            android:hint="@string/changePassword"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/new_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/listViewTextColor"
            android:textColor="@color/listViewTextColor"
            android:hint="@string/changePasswordCheck"
            android:singleLine="true"/>
        <Button
            android:id="@+id/savePasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveMenuBtn"/>
    </LinearLayout>
</LinearLayout>